<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C5C7D5">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/add_new_food"
        android:textColor="#fd00"
        android:textSize="30sp" />

    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ImgBtnCamera"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:contentDescription="@string/bottom_sheet_behavior"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/imageFood"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/ImgBtnFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:contentDescription="@string/bottom_sheet_behavior"
            app:srcCompat="@android:drawable/ic_menu_gallery" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextFood"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/food" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C5C7D5" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/btn_add"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/btn_cancel"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C5C7D5" />
    </LinearLayout>

</LinearLayout>